--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 <div id="search_tours"></div>
 <script> gettoursearch("http://ayxtour.ru/"); </script>
   <script src="js/scripts.js"></script>
-
+Kakashka
 </body>
 </html>
